; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_txrx.c_ice_can_reuse_rx_page.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_txrx.c_ice_can_reuse_rx_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_rx_buf = type { i32, i32, %struct.page* }
%struct.page = type { i32 }

@USHRT_MAX = common dso_local global i32 0, align 4
@ICE_RXBUF_2048 = common dso_local global i32 0, align 4
@PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ice_rx_buf*)* @ice_can_reuse_rx_page to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ice_can_reuse_rx_page(%struct.ice_rx_buf* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ice_rx_buf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.page*, align 8
  store %struct.ice_rx_buf* %0, %struct.ice_rx_buf** %3, align 8
  %6 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %3, align 8
  %7 = getelementptr inbounds %struct.ice_rx_buf, %struct.ice_rx_buf* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  store i32 %8, i32* %4, align 4
  %9 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %3, align 8
  %10 = getelementptr inbounds %struct.ice_rx_buf, %struct.ice_rx_buf* %9, i32 0, i32 2
  %11 = load %struct.page*, %struct.page** %10, align 8
  store %struct.page* %11, %struct.page** %5, align 8
  %12 = load %struct.page*, %struct.page** %5, align 8
  %13 = call i32 @ice_page_is_reserved(%struct.page* %12)
  %14 = call i64 @unlikely(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %42

17:                                               ; preds = %1
  %18 = load %struct.page*, %struct.page** %5, align 8
  %19 = call i32 @page_count(%struct.page* %18)
  %20 = load i32, i32* %4, align 4
  %21 = sub i32 %19, %20
  %22 = icmp ugt i32 %21, 1
  %23 = zext i1 %22 to i32
  %24 = call i64 @unlikely(i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %17
  store i32 0, i32* %2, align 4
  br label %42

27:                                               ; preds = %17
  %28 = load i32, i32* %4, align 4
  %29 = icmp eq i32 %28, 1
  %30 = zext i1 %29 to i32
  %31 = call i64 @unlikely(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %41

33:                                               ; preds = %27
  %34 = load %struct.page*, %struct.page** %5, align 8
  %35 = load i32, i32* @USHRT_MAX, align 4
  %36 = sub nsw i32 %35, 1
  %37 = call i32 @page_ref_add(%struct.page* %34, i32 %36)
  %38 = load i32, i32* @USHRT_MAX, align 4
  %39 = load %struct.ice_rx_buf*, %struct.ice_rx_buf** %3, align 8
  %40 = getelementptr inbounds %struct.ice_rx_buf, %struct.ice_rx_buf* %39, i32 0, i32 0
  store i32 %38, i32* %40, align 8
  br label %41

41:                                               ; preds = %33, %27
  store i32 1, i32* %2, align 4
  br label %42

42:                                               ; preds = %41, %26, %16
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @ice_page_is_reserved(%struct.page*) #1

declare dso_local i32 @page_count(%struct.page*) #1

declare dso_local i32 @page_ref_add(%struct.page*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
